syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.xdima.grps.customer";
option java_outer_classname = "CustomerProto";

// The service definition.
service CustomerService {
    // get list of owneres
    rpc getCustomers (GetCustomersRequest) returns (stream Customer) {}
}

message GetCustomersRequest {
}

message Customer {
    int64 id = 1;
    string name = 2;
    string email = 3;
}
